Corrección formulario, validación de datos para iniciar sesión, registrarse, cerrar sesión y conexión a DB

--- a/Portal_del_Vecino/nbproject/project.properties
+++ b/Portal_del_Vecino/nbproject/project.properties
@@ -2,3 +2,5 @@ file.reference.Portal_del_Vecino-public_html=public_html
 file.reference.Portal_del_Vecino-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.Portal_del_Vecino-public_html}
+start.file=index.php
+web.context.root=/Portal_del_Vecino
