--- a/Portal_del_Vecino/nbproject/project.properties
+++ b/Portal_del_Vecino/nbproject/project.properties
@@ -1,3 +1,5 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 file.reference.Portal_del_Vecino-public_html=public_html
 file.reference.Portal_del_Vecino-test=test
 files.encoding=UTF-8
