--- a/Portal_del_Vecino/nbproject/project.properties
+++ b/Portal_del_Vecino/nbproject/project.properties
@@ -1,8 +1,10 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference.Portal_del_Vecino-public_html=public_html
 file.reference.Portal_del_Vecino-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.Portal_del_Vecino-public_html}
 start.file=index.php
-web.context.root=/Portal_del_Vecino
+web.context.root=Portal_del_Vecino/Portal_del_vecino/public_html/
